--- a/src/Demoweb/Demo/appsettings.json
+++ b/src/Demoweb/Demo/appsettings.json
@@ -1,14 +1,13 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=192.168.0.110\\SQLEXPRESS,49172;Database=Demo;User Id=developer;Password=123456;Trust Server Certificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS,49172;Database=Demo;User Id=developer;Password=123456;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "Serilog": {
     "WriteTo": [
       {
@@ -19,8 +18,6 @@
         }
       }
     ]
-
   },
-
   "AllowedHosts": "*"
 }
